--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,1 +1,248 @@
-<p>{{avgBlockTime}}</p>
+<section>
+        <div class="row">
+            <!-- First column -->
+            <div class="col-lg-6 col-md-12">
+                <mdb-card class="testimonial-card">
+                    <!--Bacground color-->
+                    <div class="card-up indigo lighten-1">
+                    </div>
+              
+                    <!--Avatar-->
+                    <div class="avatar mx-auto">
+                      <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle">
+                    </div>
+              
+                    <mdb-card-body>
+                      <!--Name-->
+                      <mdb-card-title>
+                        <h1>Account Address</h1>
+                        <!-- <a href="#" target=" "><i class="ion-social-chrome"></i></a> -->
+                      </mdb-card-title>
+                      <hr>
+                      <!--Quotation-->
+                      <!-- <p>
+                        <i class="fas fa-quote-left"></i>Description
+                      </p> -->
+              
+                      <!-- <mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-4 pills-secondary white mb-2'" [contentClass]="'card'">
+                        <mdb-tab heading="Operator address">
+                          <div class="row">
+                            <div class="col-12">
+                              <p>operator address</p>
+                            </div>
+                          </div>
+                        </mdb-tab>
+              
+                        <mdb-tab heading="Delegator address">
+                          <div class="row">
+                            <div class="col-12">
+                              <p>validator address</p>
+                            </div>
+                          </div>
+                        </mdb-tab>
+               
+                      </mdb-tabset> -->
+                        <!--Panel-->
+                        <div class="card my-5">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <small class="grey-text">Balance</small>
+                                        <h4>50</h4>
+                                    </div>
+                                    <div class="col-4">
+                                        <small class="grey-text">Delegated</small>
+                                        <h4>150,000</h4>
+                                    </div>
+                                    <div class="col-4">
+                                        <small class="grey-text">Rewards</small>
+                                        <h4>35</h4>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-4">
+                                        <small class="grey-text">Unbonding</small>
+                                        <h4>125</h4>
+                                    </div>
+                                    <div class="col-4">
+                                        <small class="grey-text">Total (ATOM)</small>
+                                        <h4>2000</h4>
+                                    </div>
+                                    <div class="col-4">
+                                        <small class="grey-text">Total (USD)</small>
+                                        <h4>$2000</h4>
+                                    </div>
+                                </div>
+            
+                                <!-- <div class="row">
+                                    <div class="col-4">
+                                        <small class="grey-text">Commission</small>
+                                        <h4>10%</h4>
+                                    </div>
+                                    <div class="col-4">
+                                        <small class="grey-text">Commission Max</small>
+                                        <h4>25%</h4>
+                                    </div>
+                                    <div class="col-4">
+                                        <small class="grey-text">Commission Max Change</small>
+                                        <h4>1%</h4>
+                                    </div>
+                                </div> -->
+                                <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>At a Glance</a>
+                            </div>
+                        </div>
+                        <!--/.Panel-->
+                    </mdb-card-body>
+                  </mdb-card>
+                <!-- Panel -->
+                <div class="card my-5">
+                        <div class="card-body">
+                          <div class="table-responsive">
+                            <table class="table">
+                              <thead>
+                                <tr>
+                                  <th>Status</th>
+                                  <th>Title</th>
+                                  <th>User</th>
+                                  <th>Date</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td><span class="badge green">Open</span></td>
+                                  <td>Lorem ipsum dolor</td>
+                                  <td>John Doe</td>
+                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                </tr>
+                                <tr>
+                                  <td><span class="badge green">Open</span></td>
+                                  <td>Lorem ipsum dolor</td>
+                                  <td>John Doe</td>
+                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                </tr>
+                                <tr>
+                                  <td><span class="badge warning-color">In progress</span></td>
+                                  <td>Lorem ipsum dolor</td>
+                                  <td>John Doe</td>
+                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                </tr>
+                                <tr>
+                                  <td><span class="badge red">Closed</span></td>
+                                  <td>Lorem ipsum dolor</td>
+                                  <td>John Doe</td>
+                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Transactions</a>
+                          </div>
+                        </div>
+                </div>
+                <!-- /.Panel -->
+            </div>
+            <!-- /.First column -->
+            
+            <!-- Second column -->
+            <div class="col-lg-6 col-md-12">
+    
+                <!-- Panel -->
+                <div class="card my-5">
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th>Status</th>
+                            <th>Title</th>
+                            <th>User</th>
+                            <th>Date</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td><span class="badge green">Open</span></td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>John Doe</td>
+                            <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                          </tr>
+                          <tr>
+                            <td><span class="badge green">Open</span></td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>John Doe</td>
+                            <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                          </tr>
+                          <tr>
+                            <td><span class="badge warning-color">In progress</span></td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>John Doe</td>
+                            <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                          </tr>
+                          <tr>
+                            <td><span class="badge red">Closed</span></td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>John Doe</td>
+                            <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Delegations</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- /.Panel -->
+                
+                <!-- Panel -->
+                <div class="card my-5">
+                  <div class="card-body">
+                    <div class="table-responsive">
+    
+                          <table class="table">
+    
+                              <thead>
+                                  <tr>
+                                    <th>Status</th>
+                                    <th>Title</th>
+                                    <th>User</th>
+                                    <th>Date</th>
+                                  </tr>
+                              </thead>
+                              <tbody>
+                                  <tr>
+                                    <td><span class="badge green">Open</span></td>
+                                    <td>Lorem ipsum dolor</td>
+                                    <td>John Doe</td>
+                                    <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                  </tr>
+                                  <tr>
+                                    <td><span class="badge green">Open</span></td>
+                                    <td>Lorem ipsum dolor</td>
+                                    <td>John Doe</td>
+                                    <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                  </tr>
+                                  <tr>
+                                    <td><span class="badge warning-color">In progress</span></td>
+                                    <td>Lorem ipsum dolor</td>
+                                    <td>John Doe</td>
+                                    <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                  </tr>
+                                  <tr>
+                                    <td><span class="badge red">Closed</span></td>
+                                    <td>Lorem ipsum dolor</td>
+                                    <td>John Doe</td>
+                                    <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
+                                  </tr>
+                              </tbody>
+                          </table>
+    
+                    </div>
+                    <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Unbonding</a>
+                  </div>
+                </div>
+                <!-- /.Panel -->
+    
+            </div>   
+        
+            <!-- /.Second column -->
+        
+      </div>
+    </section>
