--- a/src/app/components/tx/tx.component.html
+++ b/src/app/components/tx/tx.component.html
@@ -1,52 +1,59 @@
-<!-- <<<<<<< j -->
-<div class="row search-box">
-  <div class="field has-addons">
-    <div class="control">
-      <input class="input" placeholder = "Enter tx hash" #queryInputRef >
-    </div>
-    <div class="control">
-      <a 
-        class = "button is-info" 
-        (click) = 'clickButton(queryInputRef.value)' >
-          Search
-      </a>
-    </div>
-  </div>
-</div>
-
-
-<div class="row">
-  <div *ngIf="(tx?.hash); else elseBlock" class="card events-card">
-          <div class="card-header">
-            <p class="card-header-title"><i class="fab fa-codepen"></i>Tx Height&nbsp;&nbsp;&nbsp;#{{tx.height}}</p>
-          </div>
-
-          <div class="row tx-info">
-              <div class="col span-1-of-3">
-                  <table class="table is-fullwidth">
-                    <tbody>
-                      <tr class="query-name">Hash</tr>
-                      <tr class="query-name">Height</tr>
-                      <tr class="query-name">Gas</tr>
-                      <tr class="query-name">TX</tr>
-                      <tr class="query-name" *ngFor="let tag of tx.tagsDecod">{{tag.key | titlecase }}</tr>
-                    </tbody>
-                    </table>
-              </div>
-              <div class="col span-2-of-3">
-                  <div class="card-table table-tx">
-                      <table class="table is-fullwidth">
-                        <tbody>
-                          <tr>{{tx.hash}}</tr>
-                          <tr>{{tx.height}}</tr>
-                          <tr>{{tx.gasUsed}}/{{tx.gasWanted}}</tr>
-                          <tr>{{tx.txBase64}}</tr>
-                          <tr *ngFor="let tag of tx.tagsDecod">{{tag.value}}</tr>
-                        </tbody>
-                      </table>
-                    </div>
-              </div>
-          </div>
-  </div>
-  <ng-template #elseBlock>No tx found</ng-template>
-</div>
+<mat-card class="card-1 mat-elevation-z8">
+    <mat-card-header>
+        <mat-card-title>Transaction Detail</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Hash
+              <span class="badge badge-primary badge-pill">14</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Status
+              <span class="badge badge-primary badge-pill">2</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Height
+              <span class="badge badge-primary badge-pill">1</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Timestamp
+                <span class="badge badge-primary badge-pill">1</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Fee
+              <span class="badge badge-primary badge-pill">1</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Gas (used/wanted)
+              <span class="badge badge-primary badge-pill">1</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Memo
+              <span class="badge badge-primary badge-pill">1</span>
+            </li>
+        </ul>
+    </mat-card-content>
+</mat-card>
+<mat-card class="card-2 mat-elevation-z8">
+    <mat-card-header>
+        <mat-card-title>Activity</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              From (or delegator)
+              <span class="badge badge-primary badge-pill">14</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              To (or validator)
+              <span class="badge badge-primary badge-pill">2</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Amount
+              <span class="badge badge-primary badge-pill">1</span>
+            </li>
+        </ul>
+    </mat-card-content>
+</mat-card>
+  
