WiP: More work on validator component

--- a/src/app/components/validator/validator.component.scss
+++ b/src/app/components/validator/validator.component.scss
@@ -4,7 +4,7 @@
 }
 
 .card.card-cascade h3,
-.card.card-cascade h4,
+.card.card-cascade h4
 {
   margin-bottom: 0px;
 }
@@ -41,4 +41,11 @@
 a {
   color: #4a4a4a;
   // font-size: 200%;
+}
+
+th, td {
+  overflow: hidden;
+  width:auto;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
