--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -46,7 +46,8 @@
                   </mdb-tabset>
                 </mdb-card-body>
               </mdb-card>
-
+        </div>
+        <div class="col-lg-6 col-md-12">
             <!--Panel-->
             <div class=" card my-5">
                 <div class="card-body">
@@ -114,7 +115,7 @@
                             <h4>{{ validator.commission?.max_change_rate | percent }}</h4>
                         </div>
                     </div>
-                    <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>At a Glance</a>
+                    <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Details</a>
                 </div>
             </div>
             <!--/.Panel-->
@@ -122,51 +123,39 @@
         <!-- /.First column -->
         
         <!-- Second column -->
-        <div class="col-lg-6 col-md-12">
-
-            <!-- Panel -->
-            <div class="card my-5">
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Status</th>
-                        <th>Title</th>
-                        <th>User</th>
-                        <th>Date</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td><span class="badge green">Open</span></td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>John Doe</td>
-                        <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                      </tr>
-                      <tr>
-                        <td><span class="badge green">Open</span></td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>John Doe</td>
-                        <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                      </tr>
-                      <tr>
-                        <td><span class="badge warning-color">In progress</span></td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>John Doe</td>
-                        <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                      </tr>
-                      <tr>
-                                                <td><span class="badge red">Closed</span></td>
-                                                <td>Lorem ipsum dolor</td>
-                                                <td>John Doe</td>
-                                                <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Delegators</a>
+        <div class="col-lg-12">
+            <div class="my-5">
+              <mat-card alignment="left">
+                <mat-card-title>Delegations</mat-card-title>
+                <div class="card-body">
+                  <div class="row table-responsive text-nowrap scrollbar-primary">
+                    <table mat-table [dataSource]="delegationsDataSource" class="table large-header">
+                      <ng-container matColumnDef="address">
+                        <th mat-header-cell *matHeaderCellDef> Address </th>
+                        <td mat-cell *matCellDef="let delegation"> 
+                          <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( delegation.delegator_address ) : false; else elseVetoVoter">
+                            {{ (appState | async).valsMap.get( delegation.delegator_address )}}
+                          </span>
+                          <ng-template #elseVetoVoter>
+                            {{ delegation.delegator_address }}
+                          </ng-template> 
+                        </td>
+                      </ng-container>
+                  
+                      <ng-container matColumnDef="amount">
+                        <th mat-header-cell *matHeaderCellDef> Amount </th>
+                        <td mat-cell *matCellDef="let delegation"> 
+                          {{ delegation.shares/1e6 | number:'.2-2' }}
+                        </td>
+                      </ng-container>
+                  
+                      <tr mat-header-row *matHeaderRowDef="delegationsDisplayedColumns"></tr>
+                      <tr mat-row *matRowDef="let row; columns: delegationsDisplayedColumns;"></tr>
+                    </table> 
+                    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+                  </div>
                 </div>
-              </div>
+              </mat-card>
             </div>
             <!-- /.Panel -->
             
