--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -161,11 +161,72 @@
             
             <!-- Panel -->
             <div class="card my-5">
-              <div class="card-body">
-                <div class="table-responsive">
-
-                      <table class="table">
-
+              <mat-card alignment="left">
+                  <mat-card-title>Account: {{ validator.account.value.address }}</mat-card-title>
+                  <mat-card-subtitle>Transactions (last 100)</mat-card-subtitle>
+                    <div class="card-body">
+                      <mat-tab-group (selectedTabChange)="onTabChange($event);">
+                        <mat-tab label="Staking">
+                          <table mat-table [dataSource]="accountDataSource" class="table large-header">
+                            <ng-container matColumnDef="hash">
+                              <th mat-header-cell *matHeaderCellDef> Hash </th>
+                              <td mat-cell *matCellDef="let tx">
+                                {{ tx.txhash }}
+                                <i  class="ion-ios-copy copy-button" 
+                                    style="cursor: pointer;" 
+                                    ngxClipboard [cbContent]="tx.txhash" 
+                                    (click)="onCopySuccess()">
+                                </i>
+                              </td>
+                            </ng-container>
+                        
+                            <ng-container matColumnDef="height">
+                              <th mat-header-cell *matHeaderCellDef> Height </th>
+                              <td mat-cell *matCellDef="let tx"> 
+                                {{ tx.height }} 
+                              </td>
+                            </ng-container>
+                        
+                            <tr mat-header-row *matHeaderRowDef="accountDisplayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: accountDisplayedColumns;"></tr>
+                          </table>
+                        </mat-tab>
+                        <mat-tab label="Transfer">
+                          <table mat-table [dataSource]="accountDataSource" class="table large-header">
+                            <ng-container matColumnDef="hash">
+                              <th mat-header-cell *matHeaderCellDef> Hash </th>
+                              <td mat-cell *matCellDef="let tx">
+                                {{ tx.txhash }}
+                                <i  class="ion-ios-copy copy-button" 
+                                    style="cursor: pointer;" 
+                                    ngxClipboard [cbContent]="tx.txhash" 
+                                    (click)="onCopySuccess()">
+                                </i>
+                              </td>
+                            </ng-container>
+                        
+                            <ng-container matColumnDef="height">
+                              <th mat-header-cell *matHeaderCellDef> Height </th>
+                              <td mat-cell *matCellDef="let tx"> 
+                                {{ tx.height }} 
+                              </td>
+                            </ng-container>
+                        
+                            <tr mat-header-row *matHeaderRowDef="accountDisplayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: accountDisplayedColumns;"></tr>
+                          </table>
+                        </mat-tab>
+                      </mat-tab-group>
+                    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+                  </div>
+                </mat-card>
+            </div>
+        </div>   
+  </div>
+</section>
+<!-- <div class="card-body"> -->
+                <!-- <div class="table-responsive"> -->
+                      <!-- <table class="table">
                           <thead>
                               <tr>
                                   <th>Status</th>
@@ -200,17 +261,7 @@
                                   <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
                               </tr>
                           </tbody>
-                      </table>
-
-                </div>
-                <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Power Events</a>
-              </div>
-            </div>
-            <!-- /.Panel -->
-
-        </div>   
-    
-        <!-- /.Second column -->
-    
-  </div>
-</section>
+                      </table> -->
+                <!-- </div>
+                <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Power Events</a> -->
+              <!-- </div> -->
